There is no urls to local files

--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="file:///home/orlando/Escritorio/simplefolio/justCliq.apk"
+                  href="https://github.com/Orlando17544/Portfolio/blob/main/justCliq.apk"
                 >
                   Download app
                 </a>
@@ -127,7 +127,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="file:///home/orlando/Escritorio/simplefolio/justCliq.apk" target="_blank">
+                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/blob/main/justCliq.apk" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -161,7 +161,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="file:///home/orlando/Escritorio/simplefolio/goodMeals.apk"
+                  href="https://github.com/Orlando17544/Portfolio/blob/main/goodMeals.apk"
                 >
                   Download app
                 </a>
@@ -177,7 +177,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="file:///home/orlando/Escritorio/simplefolio/goodMeals.apk" target="_blank">
+                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/blob/main/goodMeals.apk" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -211,7 +211,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="file:///home/orlando/Escritorio/simplefolio/relaxApp.apk"
+                  href="https://github.com/Orlando17544/Portfolio/blob/main/relaxApp.apk"
                 >
                   Download app
                 </a>
@@ -227,7 +227,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="file:///home/orlando/Escritorio/simplefolio/relaxApp.apk" target="_blank">
+                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/blob/main/relaxApp.apk" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -261,7 +261,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="file:///home/orlando/Escritorio/simplefolio/moviesDaily.apk"
+                  href="https://github.com/Orlando17544/Portfolio/blob/main/moviesDaily.apk"
                 >
                   Download app
                 </a>
@@ -277,7 +277,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="file:///home/orlando/Escritorio/simplefolio/moviesDaily.apk" target="_blank">
+                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/blob/main/moviesDaily.apk" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -311,7 +311,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="file:///home/orlando/Escritorio/simplefolio/trivia.apk"
+                  href="https://github.com/Orlando17544/Portfolio/blob/main/trivia.apk"
                 >
                   Download app
                 </a>
@@ -327,7 +327,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="file:///home/orlando/Escritorio/simplefolio/trivia.apk" target="_blank">
+                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/blob/main/trivia.apk" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -361,7 +361,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="file:///home/orlando/Escritorio/simplefolio/tourismApp.apk"
+                  href="https://github.com/Orlando17544/Portfolio/blob/main/tourismApp.apk"
                 >
                   Download app
                 </a>
@@ -377,7 +377,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="file:///home/orlando/Escritorio/simplefolio/tourismApp.apk" target="_blank">
+                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/blob/main/tourismApp.apk" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
