More files to ignore added to slugignore and local urls deleted

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="https://github.com/Orlando17544/Portfolio/blob/main/src/assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
     <title>Orlando Canchola | Developer</title>
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="https://github.com/Orlando17544/Portfolio/blob/main/src/assets/profile.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -138,7 +138,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/justCliq.gif"
+                      src="https://github.com/Orlando17544/Portfolio/blob/main/src/assets/justCliq.gif"
                     />
                   </div>
                 </a>
@@ -188,7 +188,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/goodMeals.gif"
+                      src="https://github.com/Orlando17544/Portfolio/blob/main/src/assets/goodMeals.gif"
                     />
                   </div>
                 </a>
@@ -238,7 +238,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/relaxApp.gif"
+                      src="https://github.com/Orlando17544/Portfolio/blob/main/src/assets/relaxApp.gif"
                     />
                   </div>
                 </a>
@@ -288,7 +288,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/moviesDaily.gif"
+                      src="https://github.com/Orlando17544/Portfolio/blob/main/src/assets/moviesDaily.gif"
                     />
                   </div>
                 </a>
@@ -338,7 +338,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/trivia.gif"
+                      src="https://github.com/Orlando17544/Portfolio/blob/main/src/assets/trivia.gif"
                     />
                   </div>
                 </a>
@@ -388,7 +388,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/tourismApp.gif"
+                      src="https://github.com/Orlando17544/Portfolio/blob/main/src/assets/tourismApp.gif"
                     />
                   </div>
                 </a>
