--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-	      	I am a react native developer with 4 years of experience, I have knowledge in the backend area using PHP
+	      	I am a react native developer with 1 year of experience, I also have knowledge in Android development
               </p>
               <p class="about-wrapper__info-text">
                 I love to work out at the gym, in fact, I go five days a week
