New projects uploaded

--- a/src/index.html
+++ b/src/index.html
@@ -101,206 +101,6 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Just Cliq</h3>
-                <div>
-                  <p class="mb-4">
-		  	This is a Ecommerce app to sell clothes and accessories.
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://github.com/Orlando17544/Portfolio/raw/main/justCliq.apk"
-                >
-                  Download app
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/Orlando17544/JustCliq"
-                >
-                  Source code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/raw/main/justCliq.apk" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="https://github.com/Orlando17544/Portfolio/raw/main/src/assets/justCliq.gif"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Good Meals</h3>
-                <div>
-                  <p class="mb-4">
-		  	It's an online food ordering app like Uber Eats
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://github.com/Orlando17544/Portfolio/raw/main/goodMeals.apk"
-                >
-                  Download app
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/Orlando17544/GoodMeals"
-                >
-                  Source code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/raw/main/goodMeals.apk" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="https://github.com/Orlando17544/Portfolio/raw/main/src/assets/goodMeals.gif"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">RelaxApp</h3>
-                <div>
-                  <p class="mb-4">
-		  	 It's an app to meditate and relax
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://github.com/Orlando17544/Portfolio/raw/main/relaxApp.apk"
-                >
-                  Download app
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/Orlando17544/RelaxApp"
-                >
-                  Source code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/raw/main/relaxApp.apk" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="https://github.com/Orlando17544/Portfolio/raw/main/src/assets/relaxApp.gif"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">MoviesDaily</h3>
-                <div>
-                  <p class="mb-4">
-		  	 It's an app to show movie reviews
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://github.com/Orlando17544/Portfolio/raw/main/moviesDaily.apk"
-                >
-                  Download app
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/Orlando17544/MoviesDaily"
-                >
-                  Source code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/raw/main/moviesDaily.apk" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="https://github.com/Orlando17544/Portfolio/raw/main/src/assets/moviesDaily.gif"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">Trivia</h3>
                 <div>
                   <p class="mb-4">
@@ -439,6 +239,56 @@
                       alt="Project Image"
                       class="img-fluid"
                       src="https://github.com/Orlando17544/Portfolio/raw/main/src/assets/reduxStore.gif"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">ReactNativeECommerce</h3>
+                <div>
+                  <p class="mb-4">
+		  	 It's an e-commerce to sell clothes. It's only the UI.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/Orlando17544/Portfolio/raw/main/reactNativeECommerce.apk"
+                >
+                  Download app
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Orlando17544/ReactNativeECommerce"
+                >
+                  Source code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/raw/main/reactNativeECommerce.apk" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="https://github.com/Orlando17544/Portfolio/raw/main/src/assets/reactNativeECommerce.gif"
                     />
                   </div>
                 </a>
