--- a/src/index.html
+++ b/src/index.html
@@ -340,6 +340,56 @@
           </div>
           <!-- /END Project -->
 
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">MusicPlayer</h3>
+                <div>
+                  <p class="mb-4">
+		  	 It's an app to download music and to store the music in the device.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/Orlando17544/Portfolio/raw/main/musicPlayer.apk"
+                >
+                  Download app
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Orlando17544/MusicPlayer"
+                >
+                  Source code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/raw/main/musicPlayer.apk" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="https://github.com/Orlando17544/Portfolio/raw/main/src/assets/musicPlayer.gif"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
         </div>
       </div>
     </section>
