MiWok app added

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-	      	I am a react native developer with 1 year of experience, I also have knowledge in Android development
+	      	I am a react native developer with 8 months of experience, I also have knowledge in Android development
               </p>
               <p class="about-wrapper__info-text">
                 I love to work out at the gym, in fact, I go five days a week
@@ -482,6 +482,56 @@
                       alt="Project Image"
                       class="img-fluid"
                       src="https://github.com/Orlando17544/Portfolio/raw/main/src/assets/restaurantsManager.gif"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">RestaurantsManager</h3>
+                <div>
+                  <p class="mb-4">
+		  	 It's an app to translate from miwok to english. It was made to know how recyclerview works.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/Orlando17544/Portfolio/raw/main/miWok.apk"
+                >
+                  Download app
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Orlando17544/Miwok"
+                >
+                  Source code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/raw/main/miWok.apk" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="https://github.com/Orlando17544/Portfolio/raw/main/src/assets/miWok.gif"
                     />
                   </div>
                 </a>
