Changed miwok title

--- a/src/index.html
+++ b/src/index.html
@@ -394,7 +394,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">RestaurantsManager</h3>
+                <h3 class="project-wrapper__text-title">MiWok</h3>
                 <div>
                   <p class="mb-4">
 		  	 It's an app to translate from miwok to english. It was made to know how recyclerview works.
