Added the book droid app

--- a/src/index.html
+++ b/src/index.html
@@ -440,6 +440,56 @@
           </div>
           <!-- /END Project -->
 
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">BookDroid</h3>
+                <div>
+                  <p class="mb-4">
+		  	 It's an app to download books from archive.com. It has 460 books to download and has 24 categories. The categories are: art, biography, children, computing, education, fantasy, fiction, finance, fun, health, history, investment, lifestyle, literature, memories, mystery, religion, romance, science fiction, self help, spirituality, suspense and technology.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/Orlando17544/Portfolio/raw/main/bookDroid.apk"
+                >
+                  Download app
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Orlando17544/BookDroid"
+                >
+                  Source code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="https://github.com/Orlando17544/Portfolio/raw/main/bookDroid.apk" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="https://github.com/Orlando17544/Portfolio/raw/main/src/assets/bookDroid.gif"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
         </div>
       </div>
     </section>
